--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://elysedalager.github.io/personal-website",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
